# qml-xmr

./: .gitignore  .gitmodules  README.md  livereload.pro
app/: Mock.qml  Mock2.qml  components  fonts  images  js  lang  monero-gui.qml  pages  qml.qrc  wizard
app/mock/: NetworkType.js  SetInterval.qml  Settings.js  Translation.js  Version.js  Watch.js  Windows.js  test.html
app/wiz/: WizardController.qml  WizardCreateWallet1.qml  WizardCreateWallet2.qml  WizardCreateWallet3.qml  WizardCreateWallet4.qml  WizardHome.qml  WizardLanguage.qml  WizardTest.qml
qml-xmr/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  example.qml  install_manifest.txt  livereload.pro  main.cpp  moc_oscursor.cpp  qml-xmr  qml-xmr.cbp
qml-xmr/qml-xmr_autogen/: mocs_compilation.cpp
qml-xmr/qml-xmr_autogen/EWIEGA46WW/: moc_oscursor.cpp
qml-xmr/src/: livereload.cpp  livereload.h  oscursor.h  utils.cpp  utils.h  window.cpp  window.h
qml-xmr/src/mocks/: NetworkType.h  QrcMock.cpp  QrcMock.h  Wallet.h  clipboard.cpp  clipboard.h
